[metadata]
name = votakvot
version = 0.1.dev1
author = Andrei Zhlobich
author_email = andrei.zhlobich@allegro.pl
url = https://github.com/allegro/votakvot
description = Track information during code testing and researching.
long_description = file: README.md
long_description_content_type = text/markdown
license = apache-2.0
classifiers =
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing
    Topic :: Software Development

[options]
python_requires = >=3.7.1,<4.0.0
packages =
    votakvot
    votakvot.extras
install_requires =
    pyyaml>=5.4
    fsspec>=0.8
    multiprocess>=0.70
    pandas>=1.1.5
    wrapt>=1.12

[options.entry_points]
console_scripts =
    votakvot-ab = votakvot.absolutely:main

[options.extras_require]
ab =
    gevent>=21
gcm =
    google-cloud-monitoring>=2.6
    gcsfs>=0.72
beam =
    apache-beam>=2.28
    gcsfs>=0.72
prometheus =
    prometheus-client>=0.11